--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dailyMeal">Daily Meal Name</string>
     <string name="dailyMealText">Daily Meal Suggested For You</string>
+    <string name="categoryField">Category Type</string>
 </resources>
