creating and validating signIn with fire Base authentication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="avilable_Countries">Avilable Countries</string>
     <string name="ingredientField">Ingrediant Field</string>
     <string name="ingredientName">Ingrediant Name</string>
+    <string name="default_web_client_id">1070173307-71ljv4b38g74pbtojoiap0tosvrl803e.apps.googleusercontent.com</string>
+    <string name="register">Not Have Account ? register</string>
 </resources>
