make some changes on the ui of categories and ingridients and countries  also start to build the category fragment and its recycler View

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="home_item">Home</string>
     <string name="search_item">Search</string>
     <string name="week_plan_item">Week Plan</string>
+    <string name="mealCategoryName">Category Name</string>
+    <string name="mealCountryName">Country Name</string>
 </resources>
