creating and working to show the meals when select a category or select a country or select a ingrident

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="week_plan_item">Week Plan</string>
     <string name="mealCategoryName">Category Name</string>
     <string name="mealCountryName">Country Name</string>
+    <string name="constMeal">" :: Meals"</string>
 </resources>
