--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,11 @@
     <string name="mealCategoryName">Category Name</string>
     <string name="mealCountryName">Country Name</string>
     <string name="constMeal">" :: Meals"</string>
+    <string name="search">Search</string>
+    <string name="filterBy">Filter By</string>
+    <string name="categories">Categories</string>
+    <string name="countries">Countries</string>
+    <string name="ingrediants">Ingrediants</string>
+    <string name="mealName">Meal Name</string>
+    <string name="meal_id">Meal ID</string>
 </resources>
