createing another branch to make details meals

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="ingrediants">Ingrediants</string>
     <string name="mealName">Meal Name</string>
     <string name="meal_id">Meal ID</string>
+    <string name="instruction">Instruction</string>
 </resources>
