working on details fragment until im about to finish ( get all mal data exept video and steps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="mealName">Meal Name</string>
     <string name="meal_id">Meal ID</string>
     <string name="instruction">Instruction</string>
+    <string name="mealSteps">Meal Steps</string>
 </resources>
