--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="meal_id">Meal ID</string>
     <string name="instruction">Instruction</string>
     <string name="mealSteps">Meal Steps</string>
+    <string name="no_instructions_available">No Instructions Avilable</string>
 </resources>
