--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,10 +44,12 @@
     <string name="wendsDay">WendsDay</string>
     <string name="thrisDay">ThrisDay</string>
     <string name="friday">FraiDay</string>
+    <string name="NONE">NONE</string>
     <string name="plannedMeals">Weak Planned Meals</string>
     <string name="continue_as_guest">Continue AS Guest</string>
     <string name="navigate_as_guest_action">Navigate AS Guest</string>
     <string-array name="days_of_week">
+        <item>NONE</item>
         <item>Monday</item>
         <item>Tuesday</item>
         <item>Wednesday</item>
