--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Food Planner</string>
+    <string name="app_name">Meal Master</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dailyMeal">Daily Meal Name</string>
@@ -58,4 +58,5 @@
         <item>Saturday</item>
         <item>Sunday</item>
     </string-array>
+
 </resources>
